; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarDateFromI8.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/oleaut32/extr_vartype.c_test_VarDateFromI8.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LONG64 = common dso_local global i32 0, align 4
@VarDateFromI8 = common dso_local global i32 0, align 4
@DATE_MIN = common dso_local global i32 0, align 4
@EXPECT_OVERFLOW = common dso_local global i32 0, align 4
@DATE_MAX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_VarDateFromI8 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_VarDateFromI8() #0 {
  %1 = load i32, i32* @LONG64, align 4
  %2 = call i32 @CONVVARS(i32 %1)
  %3 = load i32, i32* @VarDateFromI8, align 4
  %4 = load i32, i32* @DATE_MIN, align 4
  %5 = sub nsw i32 %4, 1
  %6 = call i32 @CONVERT(i32 %3, i32 %5)
  %7 = load i32, i32* @EXPECT_OVERFLOW, align 4
  %8 = load i32, i32* @VarDateFromI8, align 4
  %9 = load i32, i32* @DATE_MIN, align 4
  %10 = call i32 @CONVERT(i32 %8, i32 %9)
  %11 = load i32, i32* @DATE_MIN, align 4
  %12 = call i32 @EXPECT(i32 %11)
  %13 = load i32, i32* @VarDateFromI8, align 4
  %14 = call i32 @CONVERT(i32 %13, i32 -1)
  %15 = call i32 @EXPECT(i32 -1)
  %16 = load i32, i32* @VarDateFromI8, align 4
  %17 = call i32 @CONVERT(i32 %16, i32 0)
  %18 = call i32 @EXPECT(i32 0)
  %19 = load i32, i32* @VarDateFromI8, align 4
  %20 = call i32 @CONVERT(i32 %19, i32 1)
  %21 = call i32 @EXPECT(i32 1)
  %22 = load i32, i32* @VarDateFromI8, align 4
  %23 = load i32, i32* @DATE_MAX, align 4
  %24 = call i32 @CONVERT(i32 %22, i32 %23)
  %25 = load i32, i32* @DATE_MAX, align 4
  %26 = call i32 @EXPECT(i32 %25)
  %27 = load i32, i32* @VarDateFromI8, align 4
  %28 = load i32, i32* @DATE_MAX, align 4
  %29 = add nsw i32 %28, 1
  %30 = call i32 @CONVERT(i32 %27, i32 %29)
  %31 = load i32, i32* @EXPECT_OVERFLOW, align 4
  ret void
}

declare dso_local i32 @CONVVARS(i32) #1

declare dso_local i32 @CONVERT(i32, i32) #1

declare dso_local i32 @EXPECT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
